#4911: Fixing regression of [4653] where toolbar in shared top space has wrong height and elementpath bar in shared bottom space has wrong width.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@4844 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/mainui.css
+++ b/_source/skins/kama/mainui.css
@@ -149,11 +149,13 @@ span.cke_skin_kama
 	top: 0;
 }
 
+.cke_skin_kama .cke_browser_ie6 .cke_editor,
 .cke_skin_kama .cke_browser_ie7 .cke_editor
 {
 	display: inline-block;
 }
 
+.cke_skin_kama .cke_browser_ie6 .cke_editor,
 .cke_shared .cke_skin_kama .cke_browser_ie7 .cke_wrapper
 {
 	padding-bottom: 5px;
